# set-bot

./: CMakeLists.txt  LICENSE  package.xml
launch/: hardware.launch  set_bot.launch  software.launch
src/: image_processor.py
